--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ li {
 }
 
 .imagebackground {
-  background-image: url("images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+  background-image: url("./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
   background-size: cover;
   height: 300px;
   width: 100%;
@@ -400,7 +400,7 @@ li {
 }
 
 .imagebackground2 {
-  background-image: url("images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+  background-image: url("./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
   background-size: cover;
   height: 300px;
   width: 100%;
