--- a/sass/restaurant1.scss
+++ b/sass/restaurant1.scss
@@ -232,7 +232,7 @@
 }
 
 .imagebackground {
-	background-image: url("images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+	background-image: url("../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
 	background-size: cover;
 	height: 300px;
 	width: 100%;
@@ -242,7 +242,7 @@
 }
 
 .imagebackground2 {
-	background-image: url("images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+	background-image: url("../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
 	background-size: cover;
 	height: 300px;
 	width: 100%;
@@ -252,7 +252,7 @@
 }
 
 .imagebackground3 {
-	background-image: url("images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+	background-image: url("../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
 	background-size: cover;
 	height: 300px;
 	width: 100%;
@@ -263,7 +263,7 @@
 
 
 .imagebackground4 {
-	background-image: url("images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+	background-image: url("../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 	background-size: cover;
 	height: 300px;
 	width: 100%;
